# PNGLite

./: .gitattributes  CMakeLists.txt  README.md  file.c
.cache/clangd/index/: ctx.c.000DE6D2E85CC29A.idx  pnglite.c.671775E07A3431B5.idx  pnglite.h.3DA712D6B07E2869.idx  stb_image.h.FB1E4F6E09195BCC.idx
include/: pnglite.h
src/: pnglite.c
tests/: ctx.c  png_static.c  stb_image.h
